# aletheca

./: README.md  pyproject.toml
.github/: copilot-instructions.md
marimo_checks/: check_entity_dataclasses.py
marimo_checks/__marimo__/session/: check_entity_dataclasses.py.json
marimo_checks/layouts/: check_entity_dataclasses.grid.json
src/aletheca/: __init__.py  api.py  config.py  endpoints.py  entities.py  utils.py
