[project]
name = "aletheca"
version = "0.1.0"
description = "A library to elegantly and efficiently retrieve data from the OpenAlex API."
readme = "README.md"
authors = [
    { name = "s.mok", email = "s.mok@utwente.nl" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo>=0.17.8",
    "rich>=14.2.0",
    "ruff>=0.14.5",
    "ty>=0.0.1a26",
]
test = [
    "pytest>=9.0.1",
]
